[project]
name = "jaringan-dagang-protocol-workspace"
version = "0.0.0"
description = "Workspace root for the Python packages in jaringan-dagang-protocol. Not published."
license = { text = "Apache-2.0" }
requires-python = ">=3.12"

# Python workspace members are commented out until each package gets
# its real pyproject.toml in migration Steps 2 + 4. Uncomment as
# packages land. uv refuses to sync a workspace whose declared members
# are missing pyproject.toml files.
[tool.uv.workspace]
members = [
  "packages/beckn-protocol-py",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests", "packages/*/tests", "apps/*/tests"]
markers = [
  "browser: long-running browser/Playwright tests (real Chrome/Chromium). Run with `pytest -m browser`.",
  "llm: tests that require a live LLM provider. Run with `pytest -m llm`.",
]
# Default: run only the unit tier. Override with `-m browser` or `-m llm` (the last `-m` wins).
addopts = "-m 'not browser and not llm'"
